chat: revert styles for 'join group' buttons

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1444,16 +1444,10 @@
             }
             /// 'Read more' button.
             /._1Jc9f, /._3THW4 { c: ac }
-            /// 'Join group' button.
+            /// 'Join group' / 'View all' buttons.
             /._1PENu {
-                c: 0 t;
-                [role = 'button'] {
-                    max-width: 100px i;
-                    padding: 8px 0 i;
-                    c: white 0 ac;
-                    rad: r i;
-                    &:hover { opacity: 0.8 }
-                }
+                c: 0 #88888830;
+                [role = 'button'] { c: fg }
             }
         }
         /// Feat -> Blur img/videos.
