chat: fix 'upload preview' area in compact mode

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1945,7 +1945,7 @@
             }
             .two {
                 /// Reset upload preview.
-                >  div:nth-child(2) > div._2rI9W {
+                >  div:nth-child(2) > div:nth-child(2) {
                     flex: 0 0 calc(100% - 80px) i;
                     margin-left: calc(-25% + 80px);
                     /header ._1pYs5::after {
@@ -1969,7 +1969,7 @@
             }
             .three {
                 /// Reset upload preview.
-                >  div:nth-child(2) > div._2rI9W {
+                >  div:nth-child(2) > div:nth-child(2) {
                     flex: 0 0 calc(100% - 30% - 80px) i;
                     margin-left: calc(-25% + 80px);
                 }
