left: fix the width of floating panes

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1982,7 +1982,7 @@
                 /// Settings/Starred/Archived panes.
                 > :nth-child(2) > :nth-child(1) {
                     z-index: 201 i;
-                    flex: 0 0 calc(30% + 43px) i;
+                    flex: 0 0 30% i;
                     [style][tabindex] { border-right: 1px solid bd i }
                 }
             }
