right: fix background when the avatar is loading

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1222,7 +1222,7 @@
     // App -> Right.
     ._7YAGC .copyable-area {
         /// Default avatar.
-        [style *= 'height: 200px'] ._2EaHs { c: 0 0 hl }
+        [style *= 'height: 200px'] ._2EaHs { c: 0 0 bg }
         /// Text color.
         ._1drsQ { c: fg }
         ._2IwIk, ._1goQ0 { c: cm }
