modals: tweak header/button bg for media overlay

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -615,10 +615,10 @@
         }
         /// Header.
         > .cGLoy, .s4BtI {
-            c: 0 0 bg;
+            c: 0 0 hl;
             box-shadow: 0 1px bd;
-            /// Remove unnecessary background.
-            div { c: 0 0 t }
+            /// Remove all borders and backgrounds.
+            div { c: 0 t t }
             /// Text.
             .xD91K { c: cm }
             ._3H4MS { c: fg }
@@ -644,9 +644,9 @@
         ._21bWq { c: 0 0 hl }
         /// Previous/next buttons.
         ._3yth3:not(#z) {
-            c: 0 0 bg;
+            c: 0 0 hl;
             box-shadow: inner, bsh;
-            &:hover { c: 0 0 hl }
+            &:hover { c: 0 0 bd }
         }
         /// Text.
         .X5OiD { c: 0 0 bd }
