chat: jump to new messages appearance animation

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1385,7 +1385,7 @@
         /// Chat -> Jump to new messages.
         ._3KRbU {
             c: 0 0 hl;
-            transition: 0.15s ease;
+            transition: background 0.15s ease;
             box-shadow: inner, 0 4px 8px sh;
             &:hover { c: 0 0 bd }
             .P6z4j { c: white 0 ac }
