--- a/wa.user.styl
+++ b/wa.user.styl
@@ -516,12 +516,13 @@
         }
     }
 
-    // Global -> Profile avatar, Chat avatars, New group icon & no-blocked-contacts icon radius.
+    // Global -> Avatars.
+    /// Profile and Chat avatars; New group and 'No blocked contacts yet' icons.
     ._3BYwr, ._3RWII, ._3p0T6, ._1i7uJ {
         rad: var(--avatar-r) i;
         c: 0 0 bg;
         > img { rad: var(--avatar-r) i }
-        /// Tweak default-user icon.
+        /// Tweak default-user icons.
         if ( avatar_r != '50%' ) {
             /[style *= 'height: 26px'],
             /[style *= 'height: 40px'],
@@ -529,7 +530,7 @@
             /[style *= 'height: 200px'] {
                 [data-icon = 'default-user'] svg {
                     margin-top: -4px;
-                    transform: scale(0.8) i;
+                    transform: scale(0.7) i;
                 }
             }
         }
