icons: exclude forwarded message animation

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -859,7 +859,8 @@
             &[data-icon='status-document'], // document
             &[data-icon='status-ptt-gray'], // your audio message
             &[data-icon='recalled-in'],     // deleted message
-            &[data-icon='recalled-out'] {   // deleted message
+            &[data-icon='recalled-out'],    // deleted message
+            &[data-icon='forwarded'] {      // forwarded message
                 > svg > path {
                     fill-opacity: 0.25 i;
                 }
