--- a/wa.user.styl
+++ b/wa.user.styl
@@ -517,8 +517,8 @@
     }
 
     // Global -> Avatars.
-    /// Profile and Chat avatars; New group and 'No blocked contacts yet' icons.
-    ._3BYwr, ._3RWII, ._3p0T6, ._1i7uJ {
+    /// Profile and Chat avatars (without quoted contacts); New group and 'No blocked contacts yet' icons.
+    ._3BYwr, ._3RWII:not(.eLUC2), ._3p0T6, ._1i7uJ {
         rad: var(--avatar-r) i;
         c: 0 0 bg;
         > img { rad: var(--avatar-r) i }
