right: fixed 'forwarded x time(s)' container bg

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1274,7 +1274,7 @@
             box-shadow: 0 1px bd;
         }
         /// Message info -> Forwarded x time(s).
-        ._3XHR- {
+        ._1NZZN, ._3XHR- {
             c: fg bd t;
             span { color: inherit }
         }
