chat: fixed transparent bg for sent msg error
![Couldn't send this message error](https://user-images.githubusercontent.com/20738487/77221055-c9791c00-6b4e-11ea-9c1b-9efd15e683a5.gif)

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1691,8 +1691,8 @@
         }
         /// Right.
         &-out {
-            /// Not stickers.
-            > div:not(.a81-s) > div { c: fg 0 right }
+            /// (1) Not stickers; (2) Not error ("couldn't send this message").
+            > div:not(.a81-s) > div:not(._19l4G) { c: fg 0 right }
             /// Stickers -> Timestamp.
             > div.a81-s ._3qAvH { c: 0 0 right }
             /// Reset tails.
