icons: tweak opacity for the 'forwarded msg' icon

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -859,11 +859,11 @@
             &[data-icon='status-document'], // document
             &[data-icon='status-ptt-gray'], // your audio message
             &[data-icon='recalled-in'],     // deleted message
-            &[data-icon='recalled-out'],    // deleted message
+            &[data-icon='recalled-out'] {   // deleted message
+                > svg > path { fill-opacity: 0.25 i }
+            }
             &[data-icon='forwarded'] {      // forwarded message
-                > svg > path {
-                    fill-opacity: 0.25 i;
-                }
+                > svg > path { fill-opacity: 0.55 i }
             }
         }
         /// Left -> Reset status/chat/menu icons.
