modals: add '!important' to rules in status area

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -776,13 +776,13 @@
         > div {
             c: 0 0 bg;
             @media (min-width: 1441px) {
-                rad: r;
-                border: 1px solid bd;
+                rad: r i;
+                border: 1px solid bd i;
             }
             hr {
-                opacity: 1;
-                border: none;
-                border-top: 1px solid bd;
+                opacity: 1 i;
+                border: none i;
+                border-top: 1px solid bd i;
             }
             /// Contacts.
             > div[class]:nth-child(1) {
