left: fix typing indicator hack in compact mode

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -2051,8 +2051,10 @@
                             content: '';
                             z-index: -3;
                             position: absolute;
-                            top: -30px; right: 72px; bottom: 0; left: -72px;
-                            border: 2px solid green;
+                            top: -31px; left: -72px;
+                            height: 53px;
+                            width: 53px;
+                            box-shadow: inset 0 0 0 3px green;
                             rad: var(--avatar-r);
                             animation: 2s _20RFk infinite;
                         }
