--- a/wa.user.styl
+++ b/wa.user.styl
@@ -42,13 +42,13 @@
     'Right side  ': 'end   ',
 }
 @var checkbox chat_b_l   'Custom background for left message bubble' 0
-@var color    b_l_bg     'Left message bubble color' #383d46
+@var color    b_l_bg     'Left message bubble color' #3c434f
 @var select   chat_right 'Right message bubble position' {
     'Left side   ': 'start ',
     'Right side *': 'end   ',
 }
 @var checkbox chat_b_r   'Custom background for right message bubble' 0
-@var color    b_r_bg     'Right message bubble color' #2f343d
+@var color    b_r_bg     'Right message bubble color' #333a47
 
 @var checkbox emoji_t    'Enable transparent emoji images' 1
 @var range    emoji_o    'Emoji default opacity' [0.8, 0.0, 1, 0.01]
@@ -115,6 +115,8 @@
             --light     : #e9e9e9;
             --lighter   : #a1a1a1;
             --accent    : #7289da;
+            --msg-l     : lighten(#2c313a, 5%);
+            --msg-r     : lighten(#252a33, 4%);
         } else if ( theme == 'new' ) {
             --dark      : #292929;
             --darken    : #333333;
@@ -122,6 +124,8 @@
             --light     : #e6e6e6;
             --lighter   : #bababa;
             --accent    : #bf692b;
+            --msg-l     : lighten(#424242, 5%);
+            --msg-r     : lighten(#333333, 4%);
         } else {
             --dark      : dark;
             --darken    : darken;
@@ -129,6 +133,8 @@
             --light     : light;
             --lighter   : lighter;
             --accent    : accent;
+            --msg-l     : lighten(darker, 5%);
+            --msg-r     : lighten(darken, 4%);
         }
         --yellow    : yellow;
         --orange    : orange;
@@ -175,6 +181,8 @@
     bg      = var(--dark);
     hl      = var(--darken);
     bd      = var(--darker);
+    msg_l   = var(--msg-l);
+    msg_r   = var(--msg-r);
     fg      = var(--light);
     cm      = var(--lighter);
     ac      = var(--accent);
@@ -1528,8 +1536,8 @@
     // Main -> Chat message bubbles.
     .message {
         /// Feat -> Custom bubble colors.
-        ( chat_b_l == 0 ) ? left = bd : left = b_l_bg;
-        ( chat_b_r == 0 ) ? right = hl : right = b_r_bg;
+        ( chat_b_l == 0 ) ? left  = msg_l : left  = b_l_bg;
+        ( chat_b_r == 0 ) ? right = msg_r : right = b_r_bg;
         /// Tails -> Facebook style.
         /// TODO: Refactor later.
         if ( chat_m_t == 'fb-like' ) {
