--- a/wa.user.styl
+++ b/wa.user.styl
@@ -81,7 +81,7 @@
 
 @var color    dark       'Color: Primary background   ' #1f232a
 @var color    darken     'Color: Highlight background ' #252A33
-@var color    darker     'Color: Secondary background ' #2c313a
+@var color    darker     'Color: Secondary background ' #333943
 @var color    light      'Color: Primary foreground   ' #e9e9e9
 @var color    lighter    'Color: Secondary foreground ' #a1a1a1
 @var color    accent     'Color: Accent               ' #7289da
@@ -111,7 +111,7 @@
         if ( theme == 'old' ) {
             --dark      : #1f232a;
             --darken    : #252a33;
-            --darker    : #2c313a;
+            --darker    : #333943;
             --light     : #e9e9e9;
             --lighter   : #a1a1a1;
             --accent    : #7289da;
