global: add audio msg icons to radius tweak

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -534,6 +534,7 @@
             /[style *= 'height: 26px'],
             /[style *= 'height: 40px'],
             /[style *= 'height: 49px'],
+            /[style *= 'height: 55px'],
             /[style *= 'height: 200px'] {
                 [data-icon = 'default-user'] svg {
                     margin-top: -4px;
